objects/HWConfig__c.object
<CustomObject>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <length>32</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <label>Display Order</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>HWConfig</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Course_Name__c</columns>
        <columns>Display_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>HWC -{0}</displayFormat>
        <label>HWConfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HWConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>