objects/HWConfig__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Course_Name__c</columns>
    <columns>Display_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>